--- a/magic_notes/public/style.css
+++ b/magic_notes/public/style.css
@@ -29,16 +29,20 @@
   height: 25px;
   padding: 2.5px 4px;
   font-size: 10.72px;
-  border: 2px solid rgb(4, 207, 88);
-
+  border: 3px solid rgb(4, 207, 88);
+  cursor: pointer;
   border-radius: 20px;
+}
+
+.kuntun:active {
+  transform: scale(1.03);
 }
 
 /* Search  Component */
 
 .searchBox {
   width: 100%;
-  padding: 2%;
+  padding: 1%;
   border: 3px solid rgb(4, 207, 88);
   border-radius: 10px;
   display: flex;
@@ -70,14 +74,45 @@
 }
 
 .card {
-  width: 17.7rem;
+  width: 17.5rem;
   border-radius: 8px;
-  background-color: rgb(3, 156, 67);
+  background-color: rgb(3, 156, 80);
   padding: 8px;
+}
+
+.card:hover {
+  box-shadow: 0px 0px 4px #000;
 }
 
 .topCard textarea {
   width: 100%;
   resize: none;
-  height: 100px;
+  height: 135px;
+  background-color: rgb(3, 172, 95);
+  outline: none;
+  border: none;
+  padding: 10px;
+}
+
+.bottomCard {
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.number,
+.number span {
+  font-size: 13.2px;
+}
+
+.btnSave {
+  padding: 3px 6px;
+  border: 2px solid rgb(3, 230, 80);
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.btnSave:active {
+  transform: scale(1.02);
 }
