--- a/react-portfolio/public/style.css
+++ b/react-portfolio/public/style.css
@@ -194,3 +194,20 @@
   border-radius: 0;
 }
 /* Portfolio Page */
+
+/* About Page */
+
+.myself {
+  display: flex;
+  justify-content: space-between;
+}
+
+.myself_title {
+  width: 100%;
+}
+
+.myself_text {
+  font-size: 13px;
+  line-height: 18px;
+}
+/* /About Page */
